@@ -794,6 +794,7 @@ message TReqCreateNode
     optional bool force = 5 [default = false];
     optional bool ignore_existing = 6 [default = false];
     optional bool lock_existing = 7 [default = false];
+    optional bool ignore_type_mismatch = 8 [default = false];
 
     optional TTransactionalOptions transactional_options = 100;
     optional TPrerequisiteOptions prerequisite_options = 101;
