@@ -20,6 +20,7 @@ class TCellStatistics;
 DECLARE_REFCOUNTED_CLASS(TMasterHydraManagerConfig)
 DECLARE_REFCOUNTED_CLASS(TMasterConnectionConfig)
 DECLARE_REFCOUNTED_CLASS(TMulticellManagerConfig)
+DECLARE_REFCOUNTED_CLASS(TWorldInitializerConfig)
 DECLARE_REFCOUNTED_CLASS(TDynamicMulticellManagerConfig)
 DECLARE_REFCOUNTED_CLASS(TCellMasterConfig)
 DECLARE_REFCOUNTED_CLASS(TDynamicCellMasterConfig)
