@@ -934,6 +934,9 @@ private:
         if (request->has_lock_existing()) {
             options.LockExisting = request->lock_existing();
         }
+        if (request->has_ignore_type_mismatch()) {
+            options.IgnoreTypeMismatch = request->ignore_type_mismatch();
+        }
         if (request->has_transactional_options()) {
             FromProto(&options, request->transactional_options());
         }
